[gd_scene load_steps=4 format=2]

[ext_resource path="res://theme/theme.tres" type="Theme" id=1]
[ext_resource path="res://menus/tutorial/tutorial_menu.gd" type="Script" id=2]
[ext_resource path="res://theme/styleboxempty.tres" type="StyleBox" id=3]

[node name="TutorialMenu" type="Panel" index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 512.0
margin_bottom = 512.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
theme = ExtResource( 1 )
script = ExtResource( 2 )

[node name="VBoxContainer" type="VBoxContainer" parent="." index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 170.0
margin_bottom = 170.0
rect_scale = Vector2( 3, 3 )
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 1
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
custom_constants/separation = 16
alignment = 0
_sections_unfolded = [ "Rect", "custom_constants" ]

[node name="RichTextLabel" type="RichTextLabel" parent="VBoxContainer" index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 170.0
margin_bottom = 70.0
rect_min_size = Vector2( 170, 70 )
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 4
bbcode_enabled = true
bbcode_text = "[center]TUTORIAL[/center]

[center]WASD # Move[/center]
[center]Click # Fireball[/center]
[center]Space # Dash[/center]
[center]Escape # Pause[/center]"
visible_characters = -1
percent_visible = 1.0
meta_underlined = true
tab_size = 4
text = "TUTORIAL

WASD # Move
Click # Fireball
Space # Dash
Escape # Pause"
scroll_active = false
scroll_following = false
selection_enabled = false
override_selected_font_color = false
_sections_unfolded = [ "BBCode", "Rect" ]

[node name="HSeparator" type="HSeparator" parent="VBoxContainer" index="1"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 86.0
margin_right = 170.0
margin_bottom = 90.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
custom_styles/separator = ExtResource( 3 )

[node name="CenterContainer" type="CenterContainer" parent="VBoxContainer" index="2"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 106.0
margin_right = 170.0
margin_bottom = 122.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
use_top_left = false

[node name="Back" type="Button" parent="VBoxContainer/CenterContainer" index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 59.0
margin_right = 111.0
margin_bottom = 16.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
toggle_mode = false
enabled_focus_mode = 0
shortcut = null
group = null
text = "Back"
flat = false
align = 1

[connection signal="mouse_entered" from="VBoxContainer/CenterContainer/Back" to="." method="_play_hover"]

[connection signal="pressed" from="VBoxContainer/CenterContainer/Back" to="." method="_on_Back_pressed"]

[connection signal="pressed" from="VBoxContainer/CenterContainer/Back" to="." method="_play_select"]


